fix toggles on dark mode

--- a/CutYourTeeth/css/styles.css
+++ b/CutYourTeeth/css/styles.css
@@ -292,6 +292,8 @@ nav .ucp--menu-mobile button:not(.close) {
   width: 100%;
   padding: 10px 20px;
   font-weight: 700;
+  background: none;
+  color: var(--dark);
 }
 nav .ucp > button {
   border: none;
