--- a/CutYourTeeth/scss/components/nav.scss
+++ b/CutYourTeeth/scss/components/nav.scss
@@ -147,6 +147,8 @@ nav {
                 width: 100%;
                 padding: 10px 20px;
                 font-weight: 700;
+                background: none;
+                color: var(--dark);
             }
         }
 
